FEATURE: Use logging_timer
Use `logging_timer` to replace my previously somewhat janky hand-made
timer for functions.

It's not clear that `logging_timer` is more efficient or precise, but it
is cleaner code-wise, and for our purposes right now, is sufficient.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 log = "0.4"
 pretty_env_logger = "0.4"
 lazy_static = "1.4.0"
+logging_timer = "1.0.0"
 reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
 scraper = "0.12.0"
